...
    { label: t.settings.themeDark, value: "dark", icon: Moon02Icon },
    { label: t.settings.themeSystem, value: "system", icon: ComputerIcon },
  ];

  const languageOptions = [
    { label: "English", value: "en", icon: TranslateIcon },
    { label: "বাংলা (Bangla)", value: "bn", icon: TranslateIcon },
  ];

  return (
    <SafeAreaView
      style={[styles.container, { backgroundColor: colors.background }]}
    >
...
